--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Welcome to My First Webpage!</h1>
-    <p>This page is hosted with GitHub Pages.</p>
+    <p>This is deployed on GitHub Pages.</p>
 </body>
 </html>
